--- a/build.gradle
+++ b/build.gradle
@@ -23,22 +23,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	//mybatis 추가
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0'
+	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'mysql:mysql-connector-java'
 	// https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
-	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.6.0'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.6.0'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.3.0.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.3.0.RELEASE'
 	// https://mvnrepository.com/artifact/org.webjars/bootstrap
-	compile group: 'org.webjars', name: 'bootstrap', version: '4.5.0'
+	implementation 'org.webjars:bootstrap:4.5.0'
 	// https://mvnrepository.com/artifact/org.webjars/jquery
-	compile group: 'org.webjars', name: 'jquery', version: '3.5.1'
-
-
-
-
-
+	implementation 'org.webjars:jquery:3.5.1'
 
 
 	compileOnly 'org.projectlombok:lombok'
